# VBAtNight

./: .gitignore  DEPLOY-CHECKLIST.md  PLAN-75.md  STATUS.md  courts_config.json
app/: .gitignore  DRIVE-SETUP.md  README.md  corrections_game1.json  corrections_game14.json  next.config.mjs  package-lock.json  package.json
app/app/: globals.css  layout.js  page.js  publish-toggle.js
app/app/api/drive/: route.js
app/app/api/games/: route.js
app/app/api/identities/: route.js
app/app/api/import/: route.js
app/app/guide/: page.js
app/app/import/: page.js
app/app/login/: page.js
app/app/players/: page.js  ui.js
app/app/setup/: page.js
app/app/stats/: page.js  ui.js
app/app/watch/: page.js  ui.js
app/lib/: auth.js  db.js  drive.js  export.js  grades.js  import.js  schema.sql
app/scripts/: backfill-players.mjs  drive-auth.js  export-corrections.js  import-game.js  retrofit-tracklets.js  verify-boards.mjs
deploy/: 01-setup-server.sh  02-deploy-app.sh
m1-spike/: REPORT.md  cluster.py  detect.py  extract_signals.py  reid_experiment.ipynb  reid_experiment_v2.ipynb  seg.py  segments.json
pipeline/: M2-STATUS.md  README.md  ball_v3.json  corrections_game2.json  game_v3.json  ground_truth.json  make_bundle.sh  pyproject.toml  typer_sweep.py  ziKRzXRO
pipeline/notebooks/: ball_gen2.ipynb  colab_balltrain.ipynb  colab_plays.ipynb  colab_run.ipynb  process_game.ipynb
pipeline/vbpipe/: annotate.py  ball.py  ballcv.py  balltrain.py  cli.py  config.py  eval_corrections.py  identity.py  plays.py  rally.py  rally_debug.py  track.py
(+13 files in other folders)
